<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/side_padding_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_label_account"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <!-- spacer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/profile"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_profile"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <!-- spacer -->

        <TextView
            android:id="@+id/change_email"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_change_email"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <!-- spacer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/change_password"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_change_password"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />


        <TextView
            android:id="@+id/delete_profile"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_delete_profile"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />


        <TextView
            android:id="@+id/exit"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_exit"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <!-- spacer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_label_about"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/version"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_version"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <!-- spacer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/rules"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_rules"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <!-- spacer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/politics"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_politics"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <!-- spacer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/comment"
            style="@style/side_padding_16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/settings_button_comment"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/logo_text_size" />

        <!-- spacer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_height"
            android:background="@color/grey" />

    </LinearLayout>
</ScrollView>