<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin"
    android:paddingStart="@dimen/margin"
    android:paddingRight="@dimen/margin"
    android:paddingEnd="@dimen/margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <include layout="@layout/logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/profile_password"
            android:textColor="@color/primary"
            android:textSize="@dimen/logo_text_size"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:hint="@string/profile_hint_password"
            android:paddingStart="@dimen/small_margin"
            android:paddingLeft="@dimen/small_margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/edit_text_rectangle"
            />

        <EditText
            android:id="@+id/input_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:hint="@string/profile_hint_repeat_password"
            android:paddingStart="@dimen/small_margin"
            android:paddingLeft="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/edit_text_rectangle"
            />

        <Button
            android:id="@+id/button_save_password"
            android:textColor="@color/white"
            android:text="@string/profile_button_update_profile"
            android:background="@color/colorAccent"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>